cka-training-master/30-network-policies/allow-database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          database-access: "true"
    ports:
    - protocol: TCP
      port: 11211
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: proxy
    ports:
    - protocol: TCP
      port: 80
